# grindex

./: .env.example  .gitignore  .pre-commit-config.yml  README.md  compose.yml  deploy.compose.yml
backend/: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5a8993416980_add_missing_objective_columns.py  7adaf82682fe_initial.py  86e6c782af98_add_activeactivity_table.py
backend/app/: __init__.py
backend/app/api/dependencies/: auth.py
backend/app/api/route/auth/: endpoints.py
backend/app/api/route/v1/: activities.py  live_status.py  rooms.py  users.py
backend/app/api/schema/: activity.py  auth.py  room.py  stats.py  user.py
backend/app/core/: config.py  security.py
backend/app/database/: session.py
backend/app/models/: __init__.py  active_activity.py  activity.py  mapping.py  room.py  user.py
backend/app/services/: activity_log_service.py  activity_service.py  auth_service.py  live_status_service.py  mapping_service.py  notification_service.py  objective_service.py  reaction_service.py  room_service.py  statistics_service.py  tracker_service.py
backend/tests/: conftest.py
backend/tests/acceptance/: test_full_user_flow.py  test_room_creation_flow.py  test_tracker_flow.py
backend/tests/e2e/: test_v1_activities_e2e.py  test_v1_rooms_e2e.py
backend/tests/integration/: test_activity_routes.py  test_participation_routes.py  test_room_admin_routes.py
backend/tests/unit/: test_activity_model.py  test_mapping_model.py  test_room_model.py  test_room_service.py  test_stats_service.py  test_tracker_service.py
(+107 files in other folders)
